[#2340] fix text alignment

--- a/Dashboard/app/css/main.scss
+++ b/Dashboard/app/css/main.scss
@@ -3442,7 +3442,7 @@ div.dataCollectedDate {
     }
 }
 
-div.dataCollectedDate label {
+.dateInput {
     width: 49.5%;
     float: left;
     margin-top: -25px;
@@ -3451,7 +3451,7 @@ div.dataCollectedDate label {
     }
 }
 
-div.dataCollectedDate label input {
+div.dateInput input {
     width: 97%;
 }
 
